# bart-rs

./: .gitignore  Cargo.toml  README.md
src/: attn.rs  attn_head.rs  bart_tensor_type.rs  input.rs  main.rs  tensors.rs  tests.rs  tokenizer.rs  utils.rs  weights.rs
