[package]
name = "bart-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
candle-core = "0.3.3"
gguf-rs = "0.1.2"
half = {version="2.3.1", features = ["serde"]}
serde = {version="1.0.196", features=["derive"]}
serde_json = "1.0.113"
thiserror = "1.0.56"
