[package]
name = "bart-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = {version = "0.6.0", features = ["metal"]}
derive_more = "0.99.17"
half = {version="2.3.1", features = ["serde"]}
itertools = "0.13.0"
serde = {version="1.0.196", features=["derive"]}
serde_json = "1.0.113"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
num-traits = "0.2.19"
